<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSorteio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/VISUALIZAR"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ITENS_ORG"
        android:textSize="@dimen/text_size2"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvItensSorteio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ITENS_POS"
        android:textSize="@dimen/text_size2"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvItensSorteados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
