<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height">

        <ImageView
            android:src="@drawable/logo_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itens_sorteio_text_margin_topCustom2"
            />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/itens_sorteio_text_margin_topCustom">

        <EditText
            android:id="@+id/edtminimo"
            android:layout_width="@dimen/custom_height"
            android:layout_marginLeft="@dimen/itens_sorteio_text_margin_left2"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/LIMITE_MIN"/>

        <EditText
            android:id="@+id/edtmaximo"
            android:layout_width="@dimen/custom_height"
            android:layout_marginRight="@dimen/itens_sorteio_btn_editar_margin_right"
            android:layout_gravity="right"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/LIMITE_MAX"/>
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/itens_sorteio_text_margin_left">

        <Button
            android:id="@+id/btnsortear"
            android:layout_gravity="center"
            android:layout_width="@dimen/layout_height"
            android:layout_height="wrap_content"
            android:hint="@string/SORTEAR"
            android:onClick="sorteioSimples"
            android:background="@color/btn_background"
            android:textColorHint="@color/white"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/itens_sorteio_text_margin_top2">

        <EditText
            android:id="@+id/edtresultado"
            android:layout_gravity="center|top"
            android:layout_height="wrap_content"
            android:layout_width="@dimen/custom_height"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/RESULTADO"
            android:enabled="false"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btnsorteioPersonalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/btn_background"
            android:hint="@string/PERSONALIZAR"
            android:onClick="sorteioPersonalizado"
            android:textColorHint="@color/white" />
    </RelativeLayout>
</LinearLayout>
